--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "build": "tsc && vite build --base=/portfolio/",
+    "build-local": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint-fix": "eslint src --ext .ts,.tsx --fix ",
+    "preview": "vite preview",
+    "deploy": "bash ./.github/deploy.sh"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -26,6 +29,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
